--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<a id="official-Header-title" href="#">Sirica<sup id="sup_">  Style Speaks</sup></a>
 	<div id="headerMain-1" class="headerMain">
 		<div id="headerMain-left">
-			<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.crfashionbook.com%2Ffashion%2Fa35352074%2Fmonochrome-right-nows-hottest-look%2F&psig=AOvVaw2mezhx-Jwd9Z4JDX0oP64D&ust=1632153387714000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJji86qzi_MCFQAAAAAdAAAAABAD">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQS8H5Kh09B6bN1LBLI_LdTWQYag43ugUVEg&usqp=CAU">
 		</div>
 		<div id="headerMain-right">
 			<a href="catalog.html">Catalog</a>
