--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html>
 <html>
-<head>
 <title>Sirica Style Speaks</title>
-<script src="script.js" type="text/javascript" async></script>
-<link rel="stylesheet" href="style.css">
+<head>
+	<script src="script.js"></script>
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="https://cdn.icon-icons.com/icons2/472/PNG/48/bmw-48_45238.png" type="image/icon type">
 </head>
 <body>
-	<a id="official-Header-title" href="#">Sirica<sup id="sup_">  Style Speaks</sup></a>
-	<div id="headerMain-1" class="headerMain">
-		<div id="headerMain-left">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQS8H5Kh09B6bN1LBLI_LdTWQYag43ugUVEg&usqp=CAU">
-		</div>
-		<div id="headerMain-right">
-			<a href="catalog.html">Catalog</a>
-			<a href="catalog.html">Stores</a>
-			<a href="catalog.html">Contact Us</a>
-			<a href="catalog.html">Sign Up</a>
-		</div>
-	</div><br><br><br><br><br><br><br><br>
-	<p><i>We don't design clothes. We design dreams</i></p>
-
-	<div id="customer-review">
-		<a style="color:azure;">Customer Reviews►</a>
-		<a>Great Prices<br><sub>-Xyz</sub></a>
-		<a>Pure Luxury, that's it!<br><sup>-Xyz</sup></a>
-		<a>Awesome collections<br><sub>-Xyz</sub></a>
+	<header>
+		<img src="https://img.icons8.com/office/40/000000/logo.png"/>
+		<span id="title">Sirica<sup>Style Speaks</sup></span>
+		<input type="text" placeholder="Search"></input>
+		<a>Messaging</a>
+		<a>Notification</a>
+		<a>Profile</a>
+	</header>
+	<div id="main_lay">
+		<section id="still_1">
+			<section id="profile_blog">
+			</section>
+		</section>
+		<section id="move_1">
+			<section id="feed_blog">
+			</section>
+		</section>
+		<section id="still_2">
+			<section id="stores">
+			</section>
+			<section id="contact us">
+			</section>
+		</section>
 	</div>
-	
 </body>
 </html>
