--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Sirica Style Speaks</title>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="script.js"></script>
+	<script src="script.js" defer></script>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="https://cdn.icon-icons.com/icons2/472/PNG/48/bmw-48_45238.png" type="image/icon type">
 </head>
@@ -11,28 +11,19 @@
 		<div>
 		<span id="title">Sirica<br><i>Style Speaks</i></span><br><br>
 		<div id="tentative_section">
-			<a>Profile</a>
-			<a>Entertainment</a>
+			<a><img width=16px src="https://cdn-icons-png.flaticon.com/512/174/174855.png"></a>
+			<a><img width=16px src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+			<a><img width=16px src="https://cdn-icons-png.flaticon.com/512/906/906377.png"></a>
 		</div>
 		</div><br>
 		<div id="menu"><a>Products</a>
-		<a onclick="return notify_open('order','open')">My Orders</a>
-		<a onclick="return notify_open('trynow','open')">Try Now</a>
-		<a onclick="return notify_open('notify','open')">Notification</a>
-		<a onclick="return notify_open('contact','open')">Contact Us</a></div>
+		<a onclick="return notify_open('notify','open')">Stores</a>
+		<a onclick="return notify_open('order','open')">Feeds</a>
+		<a onclick="return notify_open('order','open')">Try Now</a>
+		<a onclick="return notify_open('contact','open')">About Us</a></div>
 	</header>
 	<div id="main_lay" onclick="notify_open('closure','close')">
-		<section id="still_1">
-			<section id="profile_blog">
-			</section>
-		</section>
 		<section id="move_1">
-			<section id="feed_blog">
-			</section>
-		</section>
-		<section id="still_2">
-			<section id="stores">
-			</section>
 		</section>
 	</div>
 	<div id="notify">
